<resources>
    <string name="app_name">E-commerce Demo</string>
    <string name="find_discover_choose_and_buy_anything_online">Find,Discover,Choose and Buy anything online.</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_m_not_an_admin">I\'m not an Admin?</string>
    <string name="i_m_an_admin">I\'m an Admin?</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="add_new_product">Add new Product</string>
    <string name="sweater">sweater</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="category">Category</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Nav Drawer</string>
    <string name="close_nav">Close Nav Drawer</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="change_profile">Change Profile</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="total_price">Total Price = </string>
    <string name="next">Next</string>
    <string name="please_confirm_your_shipment_details">Please confirm your shipment details</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City Name</string>
    <string name="confirm">Confirm</string>
    <string name="congratulations_before_shipped">Congratulations! Your final order has been placed successfully. Soon it will be verified</string>
    <string name="congratulations_after_shipped">Congratulations! Your final order has been shipped successfully. Soon you will receive your order</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="check_new_order">Check New Order</string>
    <string name="new_orders">New Orders</string>
    <string name="show_this_order_products">Show This Order Products</string>
    <string name="search">Search</string>
</resources>
