<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary" >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <TextView
              android:id="@+id/close_setting_btn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentStart="true"
              android:text="@string/close"
              android:textColor="@android:color/white"
              android:textStyle="bold"
              android:textSize="16sp"
              />

          <TextView
              android:id="@+id/update_setting_btn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:text="@string/update"
              android:textColor="@android:color/white"
              android:textStyle="bold"
              android:textSize="16sp"
              android:layout_marginEnd="10dp"
              />
      </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic_setting"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@id/app_bar_setting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile"
        />

    <TextView
        android:id="@+id/change_image_setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_pic_setting"
        android:layout_marginTop="10dp"
        android:text="@string/change_profile"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        />
    <EditText
        android:id="@+id/phone_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/change_image_setting_btn"
        android:layout_margin="15dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        />
    <EditText
        android:id="@+id/name_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/phone_setting"
        android:layout_margin="15dp"
        android:hint="@string/name"
        android:inputType="text" />
    <EditText
        android:id="@+id/address_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/name_setting"
        android:layout_margin="15dp"
        android:hint="@string/address"
        android:inputType="text"
        />




</RelativeLayout>