<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddProductActivity">

   <ImageView
       android:id="@+id/add_image_for_product"
       android:layout_width="300dp"
       android:layout_height="200dp"
       android:src="@drawable/select_product_image"
       android:layout_centerHorizontal="true"
       android:cropToPadding="false"
       android:scaleType="centerCrop"
       android:layout_marginTop="25dp"
       />

    <EditText
        android:id="@+id/add_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_image_for_product"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:hint="@string/product_name"
        android:textColorHint="@color/colorPrimary"
        android:background="@drawable/input_design"
        />
    <EditText
        android:id="@+id/add_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:hint="@string/product_description"
        android:textColorHint="@color/colorPrimary"
        android:background="@drawable/input_design"
        />
    <EditText
        android:id="@+id/add_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_description"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:hint="@string/product_price"
        android:textColorHint="@color/colorPrimary"
        android:background="@drawable/input_design"
        />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_price"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:background="@drawable/buttons"
        android:text="@string/add_product"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        />

</RelativeLayout>