<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_name"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_quantity"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_name"
            tools:text="@string/product_price"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            />



    </RelativeLayout>

</androidx.cardview.widget.CardView>