<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"

            />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative_layout"
        android:layout_above="@+id/next_btn"
        />

    <TextView
        android:id="@+id/message1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:textSize="17sp"
        android:text="@string/congratulations_before_shipped"
        android:textStyle="italic|bold"
        android:visibility="gone"

        />


    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:textStyle="bold"
        />

</RelativeLayout>